Remove CC links and classes

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,10 @@ heading: Our Work
 subtitle: See some of our proud customers with exemplary results.
 ---
 
-<section class="diagonal patterned">
-	<div class="container">
-	    <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_clients/" class="btn"><strong>&#9998;</strong> Manage Clients</a></p>
-		<ul class="image-grid">
+<section class="">
+	<div class="">
+	    
+		<ul class="">
 			{% for client in site.clients %}
 				<li>
 					<a href="{{ site.baseurl }}{{ client.url }}">
