--- a/portfolio.html
+++ b/portfolio.html
@@ -6,12 +6,12 @@ subtitle: See some of our proud customers with exemplary results.
 
 <section class="">
 	<div class="">
-	    
+
 		<ul class="">
 			{% for client in site.clients %}
 				<li>
 					<a href="{{ site.baseurl }}{{ client.url }}">
-						<img src="{% include relative-src.html src=client.image_path %}" alt="{{ person.name }}">
+						<img src="{{ site.url }}{{ client.image_path }}" alt="{{ person.name }}">
 						<div class="details">
 							<div class="name">{{ client.name }}</div>
 							<div class="position">{{ client.subtitle }}</div>
