--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@ title: Agency Template
 	<p><a href="{{ site.baseurl }}/contact/" class="f6 grow no-underline br-pill ba ph3 pv2 mb2 dib white" href="#0">Contact Us</a></p>
 </section>
 
-<section class="pa3 pa5-ns bg-white vh-100">
+<section class="pa3 pa5-ns bg-black">
 
 	<div class="w-100 pa-2 center">
 		<div>
-			<h3 class="">Some of our work</h3>
-			<p class="">We take pride in our previous work and our happy customers. We cater to any sector to boost business and increase exposure.</p>
-			<p class=""><a href="{{ site.baseurl }}/portfolio/">View Full Portfolio &rarr;</a></p>
+			<h2 class="f3 f1-m f-headline-l white">Some of our work</h2>
+			<p class="measure lh-copy white-90 mb6">We take pride in our previous work and our happy customers. We cater to any sector to boost business and increase exposure.</p>
 		</div>
 	</div>
 
@@ -29,5 +28,7 @@ title: Agency Template
     </a>
   </article>
 {% endfor %}
+
+<p class=""><a href="{{ site.baseurl }}/portfolio/" class="f6 grow no-underline br-pill ba ph3 pv2 mb2 dib black">View Full Portfolio &rarr;</a></p>
 
 </section>
